# estate

./: .gitignore  pyproject.toml
.github/workflows/: weekly-scan.yml
config/: brands.json  settings.json
public/: index.html
src/estate_arb/: cli.py  config.py
src/estate_arb/matching/: brand_matcher.py  price_analyzer.py
src/estate_arb/models/: ebay_listing.py  estate_sale.py  opportunity.py
src/estate_arb/output/: html_report.py  terminal.py
src/estate_arb/scrapers/: base.py  ebay.py  estatesales.py
src/estate_arb/vision/: photo_analyzer.py
