[project]
name = "estate-arb"
version = "0.1.0"
description = "Estate sale arbitrage finder - AI-powered scouting with eBay price cross-referencing"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "boto3>=1.34",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
    "aiohttp>=3.9",
]

[project.scripts]
estate-arb = "estate_arb.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
